--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
+    "mongoose": "^6.0.11",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {},
